resources/experiment/0814-specgen/081401/Branched/log-LeapYear_Mutant3-2025_08_15_02_55_14.txt
public class LeapYear_Mutant3 {
    //@ requires year >= 0;
    //@ ensures \result == ((year % 4 == 0 && year % 100 != 0) || (year % 400 == 0);
    public static boolean isLeapYear(int year) {
        boolean leap = false;
        if (year % 4 == 0) {
            if (year % 100 == 0) {
                if (year % 400 == 0)
                    leap = false;
                else
                    leap = true;
            } else
                leap = true;
        } else
            leap = false;
        return leap;
    }
}
==============================
/root/specgen/SpecGen/project/081401-specgen/tmp/LeapYear_Mutant3.java:3: error: ')' expected
    //@ ensures \result == ((year % 4 == 0 && year % 100 != 0) || (year % 400 == 0);
                                                                                   ^
1 error

==============================
public class LeapYear_Mutant3 {
    //@ requires year >= 0;
    //@ ensures \result == ((year % 4 == 0 && year % 100 != 0) || (year % 400 == 0));
    public static boolean isLeapYear(int year) {
        boolean leap = false;
        if (year % 4 == 0) {
            if (year % 100 == 0) {
                if (year % 400 == 0)
                    leap = false;
                else
                    leap = true;
            } else
                leap = true;
        } else
            leap = false;
        return leap;
    }
}
==============================
/root/specgen/SpecGen/project/081401-specgen/tmp/LeapYear_Mutant3.java:16: verify: The prover cannot establish an assertion (Postcondition: /root/specgen/SpecGen/project/081401-specgen/tmp/LeapYear_Mutant3.java:3:) in method isLeapYear
        return leap;
        ^
/root/specgen/SpecGen/project/081401-specgen/tmp/LeapYear_Mutant3.java:3: verify: Associated declaration: /root/specgen/SpecGen/project/081401-specgen/tmp/LeapYear_Mutant3.java:16:
    //@ ensures \result == ((year % 4 == 0 && year % 100 != 0) || (year % 400 == 0));
        ^
2 verification failures

==============================
public class LeapYear_Mutant3 {
    //@ requires year >= 0;
    //@ ensures \result == ((year % 4 == 0 && year % 100 != 0) || (year % 400 == 0));  
    public static boolean isLeapYear(int year) {
        boolean leap = false;
        if (year % 4 == 0) {
            if (year % 100 == 0) {
                if (year % 400 == 0)
                    leap = false;
                else
                    leap = true;
            } else
                leap = true;
        } else
            leap = false;
        return leap;
    }
}

==============================
/root/specgen/SpecGen/project/081401-specgen/tmp/LeapYear_Mutant3.java:16: verify: The prover cannot establish an assertion (Postcondition: /root/specgen/SpecGen/project/081401-specgen/tmp/LeapYear_Mutant3.java:3:) in method isLeapYear
        return leap;
        ^
/root/specgen/SpecGen/project/081401-specgen/tmp/LeapYear_Mutant3.java:3: verify: Associated declaration: /root/specgen/SpecGen/project/081401-specgen/tmp/LeapYear_Mutant3.java:16:
    //@ ensures \result == ((year % 4 == 0 && year % 100 != 0) || (year % 400 == 0));  
        ^
2 verification failures

==============================
public class LeapYear_Mutant3 {
    //@ requires year >= 0;
 
    public static boolean isLeapYear(int year) {
        boolean leap = false;
        if (year % 4 == 0) {
            if (year % 100 == 0) {
                if (year % 400 == 0)
                    leap = false;
                else
                    leap = true;
            } else
                leap = true;
        } else
            leap = false;
        return leap;
    }
}

==============================

==============================
